Changes for review comments [HZ-2010]